# misis2023f-23-02-fedulov-p-s

./: .gitignore  CMakeLists.txt  codeforces.id.txt  status.md
prj.codeforces/: 0004a.cpp  0033b.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0731a.cpp  0978a.cpp  0978b.cpp  0978c.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1512b.cpp  1512c.cpp  1559a.cpp  1649a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1744c.cpp  1836a.cpp  1846a.cpp  1846b.cpp  1862a.cpp  1872a.cpp  1872b.cpp  1873c.cpp  1873d.cpp  1875a.cpp  1875b.cpp  1878a.cpp  1879a.cpp  1879b.cpp  1881a.cpp  1882a.cpp  (+6 more)
prj.lab/: CMakeLists.txt  complex.cpp  test_complex.cpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/dynpon/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_rational.cpp  test_rationale.cpp
prj.test/test_complex/: CMakeLists.txt  test_complex.cpp
prj.test/test_rational/: CMakeLists.txt  test_rational.cpp
