add_executable(0004a 0004a.cpp)
add_executable(0033b 0033b.cpp)
add_executable(0136b 0136b.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0276a 0276a.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0978a 0978a.cpp)
add_executable(1330a 1330a.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1404a 1404a.cpp)
add_executable(1512c 1512c.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1670b 1670b.cpp)
add_executable(1717b 1717b.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1734b 1734b.cpp)
add_executable(1862a 1862a.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1872b 1872b.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)
add_executable(1875a 1875a.cpp)
add_executable(1875b 1875b.cpp)
add_executable(1878a 1878a.cpp)
add_executable(1879a 1879a.cpp)
add_executable(1879b 1879b.cpp)
add_executable(1882a 1882a.cpp)
add_executable(1882b 1882b.cpp)
add_executable(1881a 1881a.cpp)
add_executable(1512b 1512b.cpp)
add_executable(1649a 1649a.cpp)
add_executable(0731a 0731a.cpp)
add_executable(1883a 1883a.cpp)
add_executable(1690d 1690d.cpp)
add_executable(1669d 1669d.cpp)
add_executable(1744c 1744c.cpp) 
add_executable(1846a 1846a.cpp) 